add DB env connection string
